# HPC-labs

./: Cargo.toml
lab1/: Cargo.toml  README.adoc
lab1/benches/: bench.rs
lab1/examples/: parallel.rs  serial.rs
lab1/src/: lib.rs
lab1/src/common/: mod.rs
lab1/src/parallel/: error.rs  example.rs  mod.rs
lab1/src/serial/: example.rs  mod.rs
lab2/: Cargo.toml  README.adoc
lab2/examples/: parallel.rs  serial.rs
lab2/src/: lib.rs
lab2/src/parallel/: mod.rs
lab2/src/serial/: mod.rs
lab3/: Cargo.toml  README.adoc
lab3/examples/: parallel.rs  serial.rs
lab3/src/parallel/: mod.rs
lab3/src/serial/: mod.rs
lab4/: Cargo.toml  README.adoc
lab4/examples/: parallel.rs  serial.rs
lab5/: Cargo.toml  README.adoc
lab5/examples/: parallel.rs  serial.rs
lab5/src/serial/: mod.rs
lab6/: Cargo.toml  README.adoc
lab6/examples/: parallel_lab6.rs  serial.rs
lab6/src/: lib.rs
lab6/src/serial/: mod.rs
