[workspace]
resolver = "2"

members = [
  "lab1",
  "lab2"
]

[workspace.dependencies]
rand = { version = "0.8.4" }
once_cell = { version = "1.18.0" }
criterion = { version = "0.5.1" }
thiserror = { version = "1.0.49" }
mpi = { git = "https://github.com/rsmpi/rsmpi.git", rev = "ddb1dbd31303074f8bce37a691c7b5f75d491243", features = ["derive"] }
