[package]
name = "lab1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
once_cell = { workspace = true }
criterion = { workspace = true }
thiserror = { workspace = true }
mpi = { workspace = true }

[[bench]]
name = "bench"
path = "benches/bench.rs"
harness = false

[[example]]
name = "serial"
path = "examples/serial.rs"

[[example]]
name = "parallel"
path = "examples/parallel.rs"
