[package]
name = "lab3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
once_cell = { workspace = true }
criterion = { workspace = true }
thiserror = { workspace = true }
mpi = { workspace = true }

lab1 = { path = "../lab1", version = "0.1.0" }
memoffset = "0.9.0"


[[example]]
name = "lab3_serial"
path = "examples/serial.rs"

[[example]]
name = "lab3_parallel"
path = "examples/parallel2.rs"